scrollbar bugfix
collision with default scroll

--- a/style/scrollbar.scss
+++ b/style/scrollbar.scss
@@ -3,7 +3,7 @@
   right: 0;
   top: 0;
   bottom: 50px;
-  width: 20px;
+  width: 10vw;
   overflow: visible !important;
   z-index: 2;
   li {
